--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-<head>
+<html lang="en" class="bg-base-300"><head>
   <meta charset="utf-8">
   <title>Client</title>
   <base href="/">
